# codecadet

./: .coverage  .pre-commit-config.yaml  =3.10.0  =6.9.1  README.md  check_toml.py  clipboard.py  config.py  error_handler.py  git_utils.py  graphite_utils.py  logging_config.py  main.py  main_new.py  metrics.py  models.py  pyproject.toml  pyproject_new.toml  session.py  terminal.py  test_logging.py  validate_toml.py
assets/: web-terminal.html
multi_claude_coding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_basic.py  test_config.py  test_git_utils.py  test_models.py  test_session.py
tmp-workflows/: ci.yml  release.yml
ui/: __init__.py  dialogs.py  main_window.py  pty_terminal.py  sidebar.py  terminal_pane.py  tooltip.py  web_terminal.py
